# chatbotchat

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
bins/cbc/: Cargo.toml
bins/cbc/skill/: SKILL.md
bins/cbc/skill/cbc/: SKILL.md
bins/cbc/skill/cbc-checkup/: SKILL.md
bins/cbc/skill/cbc-clean/: SKILL.md
bins/cbc/skill/cbc-orchestrator/: SKILL.md
bins/cbc/skill/cbc-peer/: SKILL.md
bins/cbc/skill/cbc-recap/: SKILL.md
bins/cbc/skill/cbc-reconcile/: SKILL.md
bins/cbc/skill/cbc-refresh/: SKILL.md
bins/cbc/skill/cbc-report/: SKILL.md
bins/cbc/skill/cbc-worker/: SKILL.md
bins/cbc/src/: context.rs  hook.rs  install.rs  main.rs  mcp.rs  settings.rs  skill.rs  wait_status.rs
bins/cbc/tests/: cli.rs  mcp.rs
bins/chatbotchat-server/: Cargo.toml
bins/chatbotchat-server/src/: lib.rs  main.rs
bins/chatbotchat-server/tests/: daemon.rs
crates/chatbotchat-client/: Cargo.toml
crates/chatbotchat-client/src/: lib.rs
crates/chatbotchat-core/: Cargo.toml
crates/chatbotchat-core/migrations/: 0001_rooms.sql  0002_participants.sql  0003_messages.sql  0004_message_type.sql  0005_message_from_human.sql  0006_message_severity_and_question_text.sql  0007_events.sql  0008_room_state_changed_at.sql  0009_participant_instance.sql  0010_participant_nickname.sql  0011_participant_close_vote.sql  0012_participant_extend_vote.sql
crates/chatbotchat-core/src/: event.rs  http.rs  identity.rs  ids.rs  lib.rs  lifecycle.rs  message.rs  participant.rs  presence.rs  room.rs  storage.rs  sweeper.rs  waiter.rs
crates/chatbotchat-core/tests/: http_api.rs  lifecycle.rs  storage.rs  sweeper.rs  waiter.rs
crates/chatbotchat-protocol/: Cargo.toml
crates/chatbotchat-protocol/src/: lib.rs
docs/: COORDINATION_MODES.md  TERMINAL_TITLES.md  UBIQUITOUS_LANGUAGE.md  v1-design-locked.md  v2-ideas.md
docs/decisions/: 0001-rescope-to-usable-alpha.md  0002-participant-identity-is-an-instance-token.md  0003-consensus-close.md  0004-background-poll-owns-the-wait.md  0005-consensus-extend.md  0006-coordination-modes-direct-and-orchestrated.md  0007-room-refresh-and-close-teardown.md  0008-orchestrator-never-spawns-implementation-agents.md  0009-orchestrator-owns-dev-servers.md  0010-orchestration-map-is-self-grounding.md
docs/proposals/: staleness-and-background-polling.md
etc/: com.chatbotchat.server.plist
logo/: chatbotchat.icns  make-icns.sh
