[package]
name = "cbc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cbc"
path = "src/main.rs"

[dependencies]
chatbotchat-protocol = { workspace = true }
chatbotchat-client = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
