[package]
name = "cbc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cbc"
path = "src/main.rs"

[dependencies]
chatbotchat-protocol = { workspace = true }
chatbotchat-client = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }

[dev-dependencies]
chatbotchat-server = { workspace = true }
chatbotchat-core = { workspace = true }
assert_cmd = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
